[gd_scene load_steps=2 format=3 uid="uid://ci8wjcfh5rm3s"]

[ext_resource type="Script" path="res://Scripts/pause_menu.gd" id="1_55h1n"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_55h1n")

[node name="PauseBackground" type="ColorRect" parent="."]
offset_right = 768.0
offset_bottom = 432.0
color = Color(0, 0, 0, 0.552941)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -88.0
offset_right = 128.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 75
alignment = 1

[node name="Resume" type="Button" parent="PauseBackground/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "RESUME!!!"

[node name="Quit" type="Button" parent="PauseBackground/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "QUIITTTT!!!!"

[connection signal="pressed" from="PauseBackground/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseBackground/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
